configs/cert-manager/templates/infomaniak-webhook.yaml
---
# Source: infomaniak-webhook/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: infomaniak-webhook
  namespace: "cert-manager"
  annotations:
    argocd.argoproj.io/hook: PostSync
  labels:
    app: infomaniak-webhook
    chart: infomaniak-webhook-0.2.0
    release: infomaniak-webhook
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: https
      protocol: TCP
      name: https
  selector:
    app: infomaniak-webhook
    release: infomaniak-webhook
---
# Source: infomaniak-webhook/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infomaniak-webhook
  namespace: "cert-manager"
  annotations:
    argocd.argoproj.io/hook: PostSync
  labels:
    app: infomaniak-webhook
    chart: infomaniak-webhook-0.2.0
    release: infomaniak-webhook
    heritage: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: infomaniak-webhook
      release: infomaniak-webhook
  template:
    metadata:
      labels:
        app: infomaniak-webhook
        release: infomaniak-webhook
    spec:
      serviceAccountName: infomaniak-webhook
      containers:
        - name: infomaniak-webhook
          image: "ghcr.io/infomaniak/cert-manager-webhook-infomaniak:latest"
          imagePullPolicy: IfNotPresent
          args:
            - --v=2
            - --tls-cert-file=/tls/tls.crt
            - --tls-private-key-file=/tls/tls.key
          ports:
            - name: https
              containerPort: 443
              protocol: TCP
          livenessProbe:
            httpGet:
              scheme: HTTPS
              path: /healthz
              port: https
          readinessProbe:
            httpGet:
              scheme: HTTPS
              path: /healthz
              port: https
          volumeMounts:
            - name: certs
              mountPath: /tls
              readOnly: true
          resources:
            {}
      volumes:
        - name: certs
          secret:
            secretName: infomaniak-webhook-webhook-tls
