configs/cert-manager/templates/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    argocd.argoproj.io/instance: cert-manager
  name: cert-manager-ns-internal
spec:
  ingress:
  - from:
    - namespaceSelector: {}
  egress:
  - to:
    - podSelector: {}
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: cert-manager
  policyTypes:
  - Ingress
  - Egress
